Fix button label for restarting the game and ensure consistency in game over messaging

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
     <div class="winner-msg hide">
         <p id="msg">Congratulations, Winner is : <span id="winner"></span></p>
-        <button id="restart">Reset Game</button>
+        <button id="restart">Restart Game</button>
+    </div>
+    <div class="game-over-div hide">
+        <p id="game-over-msg">Ops! Game Over..</span></p>
+        <button id="restartAfterOver">Restart Game</button>
     </div>
     <main>
         <h1>Tic Tac Toe</h1>
